INE5426/src/compiler/semantic/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     empty -> <empty>
Rule 2     new_scope -> <empty>
Rule 3     new_loop_scope -> <empty>
Rule 4     PROGRAM -> new_scope STATEMENT
Rule 5     PROGRAM -> new_scope FUNCLIST
Rule 6     PROGRAM -> empty
Rule 7     FUNCLIST -> FUNCDEF FUNCLISTAUX
Rule 8     FUNCLISTAUX -> FUNCLIST
Rule 9     FUNCLISTAUX -> empty
Rule 10    FUNCDEF -> DEF IDENT new_scope LPAREN PARAMLIST RPAREN LBRACKETS STATELIST RBRACKETS
Rule 11    PARAMLIST -> DATATYPE IDENT PARAMLISTAUX
Rule 12    PARAMLIST -> empty
Rule 13    PARAMLISTAUX -> COMMA PARAMLIST
Rule 14    PARAMLISTAUX -> empty
Rule 15    DATATYPE -> INT_KEYWORD
Rule 16    DATATYPE -> FLOAT_KEYWORD
Rule 17    DATATYPE -> STRING_KEYWORD
Rule 18    STATEMENT -> VARDECL SEMICOLON
Rule 19    STATEMENT -> ATRIBSTAT SEMICOLON
Rule 20    STATEMENT -> PRINTSTAT SEMICOLON
Rule 21    STATEMENT -> READSTAT SEMICOLON
Rule 22    STATEMENT -> RETURNSTAT SEMICOLON
Rule 23    STATEMENT -> IFSTAT
Rule 24    STATEMENT -> FORSTAT
Rule 25    STATEMENT -> new_scope LBRACKETS STATELIST RBRACKETS
Rule 26    STATEMENT -> BREAK SEMICOLON
Rule 27    STATEMENT -> SEMICOLON
Rule 28    VARDECL -> DATATYPE IDENT OPT_VECTOR
Rule 29    OPT_VECTOR -> LSQBRACKETS INT_CONSTANT RSQBRACKETS OPT_VECTOR
Rule 30    OPT_VECTOR -> empty
Rule 31    ATRIBSTAT -> LVALUE ATTRIBUTION ATRIB_RIGHT
Rule 32    ATRIB_RIGHT -> FUNCCALL_OR_EXPRESSION
Rule 33    ATRIB_RIGHT -> ALLOCEXPRESSION
Rule 34    FUNCCALL_OR_EXPRESSION -> PLUS FACTOR REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 35    FUNCCALL_OR_EXPRESSION -> MINUS FACTOR REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 36    FUNCCALL_OR_EXPRESSION -> INT_CONSTANT REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 37    FUNCCALL_OR_EXPRESSION -> FLOAT_CONSTANT REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 38    FUNCCALL_OR_EXPRESSION -> STRING_CONSTANT REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 39    FUNCCALL_OR_EXPRESSION -> NULL REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 40    FUNCCALL_OR_EXPRESSION -> LPAREN NUMEXPRESSION RPAREN REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 41    FUNCCALL_OR_EXPRESSION -> IDENT FOLLOW_IDENT
Rule 42    FOLLOW_IDENT -> OPT_ALLOC_NUMEXP REC_UNARYEXPR REC_PLUS_MINUS_TERM OPT_REL_OP_NUM_EXPR
Rule 43    FOLLOW_IDENT -> LPAREN PARAMLISTCALL RPAREN
Rule 44    PARAMLISTCALL -> IDENT PARAMLISTCALLAUX
Rule 45    PARAMLISTCALL -> empty
Rule 46    PARAMLISTCALLAUX -> COMMA PARAMLISTCALL
Rule 47    PARAMLISTCALLAUX -> empty
Rule 48    PRINTSTAT -> PRINT EXPRESSION
Rule 49    READSTAT -> READ LVALUE
Rule 50    RETURNSTAT -> RETURN
Rule 51    IFSTAT -> IF LPAREN EXPRESSION RPAREN new_scope LBRACKETS STATELIST RBRACKETS OPT_ELSE
Rule 52    OPT_ELSE -> ELSE new_scope LBRACKETS STATELIST RBRACKETS
Rule 53    OPT_ELSE -> empty
Rule 54    FORSTAT -> FOR LPAREN ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPAREN new_loop_scope LBRACKETS STATELIST RBRACKETS
Rule 55    STATELIST -> STATEMENT OPT_STATELIST
Rule 56    OPT_STATELIST -> STATELIST
Rule 57    OPT_STATELIST -> empty
Rule 58    ALLOCEXPRESSION -> NEW DATATYPE LSQBRACKETS NUMEXPRESSION RSQBRACKETS OPT_ALLOC_NUMEXP
Rule 59    OPT_ALLOC_NUMEXP -> LSQBRACKETS NUMEXPRESSION RSQBRACKETS OPT_ALLOC_NUMEXP
Rule 60    OPT_ALLOC_NUMEXP -> empty
Rule 61    EXPRESSION -> NUMEXPRESSION OPT_REL_OP_NUM_EXPR
Rule 62    OPT_REL_OP_NUM_EXPR -> REL_OP NUMEXPRESSION
Rule 63    OPT_REL_OP_NUM_EXPR -> empty
Rule 64    REL_OP -> LOWER_THAN
Rule 65    REL_OP -> GREATER_THAN
Rule 66    REL_OP -> LOWER_OR_EQUALS_THAN
Rule 67    REL_OP -> GREATER_OR_EQUALS_THAN
Rule 68    REL_OP -> EQ_COMPARISON
Rule 69    REL_OP -> NEQ_COMPARISON
Rule 70    NUMEXPRESSION -> TERM REC_PLUS_MINUS_TERM
Rule 71    REC_PLUS_MINUS_TERM -> PLUS_OR_MINUS TERM REC_PLUS_MINUS_TERM
Rule 72    REC_PLUS_MINUS_TERM -> empty
Rule 73    PLUS_OR_MINUS -> PLUS
Rule 74    PLUS_OR_MINUS -> MINUS
Rule 75    TERM -> UNARYEXPR REC_UNARYEXPR
Rule 76    REC_UNARYEXPR -> UNARYEXPR_OP TERM
Rule 77    REC_UNARYEXPR -> empty
Rule 78    UNARYEXPR_OP -> TIMES
Rule 79    UNARYEXPR_OP -> MODULE
Rule 80    UNARYEXPR_OP -> DIVIDE
Rule 81    UNARYEXPR -> PLUS_OR_MINUS FACTOR
Rule 82    UNARYEXPR -> FACTOR
Rule 83    FACTOR -> INT_CONSTANT
Rule 84    FACTOR -> FLOAT_CONSTANT
Rule 85    FACTOR -> STRING_CONSTANT
Rule 86    FACTOR -> NULL
Rule 87    FACTOR -> LVALUE
Rule 88    FACTOR -> LPAREN NUMEXPRESSION RPAREN
Rule 89    LVALUE -> IDENT OPT_ALLOC_NUMEXP

Terminals, with rules where they appear

ATTRIBUTION          : 31
BREAK                : 26
COMMA                : 13 46
DEF                  : 10
DIVIDE               : 80
ELSE                 : 52
EQ_COMPARISON        : 68
FLOAT_CONSTANT       : 37 84
FLOAT_KEYWORD        : 16
FOR                  : 54
GREATER_OR_EQUALS_THAN : 67
GREATER_THAN         : 65
IDENT                : 10 11 28 41 44 89
IF                   : 51
INT_CONSTANT         : 29 36 83
INT_KEYWORD          : 15
LBRACKETS            : 10 25 51 52 54
LOWER_OR_EQUALS_THAN : 66
LOWER_THAN           : 64
LPAREN               : 10 40 43 51 54 88
LSQBRACKETS          : 29 58 59
MINUS                : 35 74
MODULE               : 79
NEQ_COMPARISON       : 69
NEW                  : 58
NULL                 : 39 86
PLUS                 : 34 73
PRINT                : 48
RBRACKETS            : 10 25 51 52 54
READ                 : 49
RETURN               : 50
RPAREN               : 10 40 43 51 54 88
RSQBRACKETS          : 29 58 59
SEMICOLON            : 18 19 20 21 22 26 27 54 54
STRING_CONSTANT      : 38 85
STRING_KEYWORD       : 17
TIMES                : 78
error                : 

Nonterminals, with rules where they appear

ALLOCEXPRESSION      : 33
ATRIBSTAT            : 19 54 54
ATRIB_RIGHT          : 31
DATATYPE             : 11 28 58
EXPRESSION           : 48 51 54
FACTOR               : 34 35 81 82
FOLLOW_IDENT         : 41
FORSTAT              : 24
FUNCCALL_OR_EXPRESSION : 32
FUNCDEF              : 7
FUNCLIST             : 5 8
FUNCLISTAUX          : 7
IFSTAT               : 23
LVALUE               : 31 49 87
NUMEXPRESSION        : 40 58 59 61 62 88
OPT_ALLOC_NUMEXP     : 42 58 59 89
OPT_ELSE             : 51
OPT_REL_OP_NUM_EXPR  : 34 35 36 37 38 39 40 42 61
OPT_STATELIST        : 55
OPT_VECTOR           : 28 29
PARAMLIST            : 10 13
PARAMLISTAUX         : 11
PARAMLISTCALL        : 43 46
PARAMLISTCALLAUX     : 44
PLUS_OR_MINUS        : 71 81
PRINTSTAT            : 20
PROGRAM              : 0
READSTAT             : 21
REC_PLUS_MINUS_TERM  : 34 35 36 37 38 39 40 42 70 71
REC_UNARYEXPR        : 34 35 36 37 38 39 40 42 75
REL_OP               : 62
RETURNSTAT           : 22
STATELIST            : 10 25 51 52 54 56
STATEMENT            : 4 55
TERM                 : 70 71 76
UNARYEXPR            : 75
UNARYEXPR_OP         : 76
VARDECL              : 18
empty                : 6 9 12 14 30 45 47 53 57 60 63 72 77
new_loop_scope       : 54
new_scope            : 4 5 10 25 51 52

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (4) PROGRAM -> . new_scope STATEMENT
    (5) PROGRAM -> . new_scope FUNCLIST
    (6) PROGRAM -> . empty
    (2) new_scope -> .
    (1) empty -> .

    BREAK           reduce using rule 2 (new_scope -> .)
    SEMICOLON       reduce using rule 2 (new_scope -> .)
    PRINT           reduce using rule 2 (new_scope -> .)
    READ            reduce using rule 2 (new_scope -> .)
    RETURN          reduce using rule 2 (new_scope -> .)
    IF              reduce using rule 2 (new_scope -> .)
    FOR             reduce using rule 2 (new_scope -> .)
    DEF             reduce using rule 2 (new_scope -> .)
    INT_KEYWORD     reduce using rule 2 (new_scope -> .)
    FLOAT_KEYWORD   reduce using rule 2 (new_scope -> .)
    STRING_KEYWORD  reduce using rule 2 (new_scope -> .)
    IDENT           reduce using rule 2 (new_scope -> .)
    LBRACKETS       reduce using rule 2 (new_scope -> .)
    $end            reduce using rule 1 (empty -> .)

    PROGRAM                        shift and go to state 1
    new_scope                      shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> PROGRAM .



state 2

    (4) PROGRAM -> new_scope . STATEMENT
    (5) PROGRAM -> new_scope . FUNCLIST
    (18) STATEMENT -> . VARDECL SEMICOLON
    (19) STATEMENT -> . ATRIBSTAT SEMICOLON
    (20) STATEMENT -> . PRINTSTAT SEMICOLON
    (21) STATEMENT -> . READSTAT SEMICOLON
    (22) STATEMENT -> . RETURNSTAT SEMICOLON
    (23) STATEMENT -> . IFSTAT
    (24) STATEMENT -> . FORSTAT
    (25) STATEMENT -> . new_scope LBRACKETS STATELIST RBRACKETS
    (26) STATEMENT -> . BREAK SEMICOLON
    (27) STATEMENT -> . SEMICOLON
    (7) FUNCLIST -> . FUNCDEF FUNCLISTAUX
    (28) VARDECL -> . DATATYPE IDENT OPT_VECTOR
    (31) ATRIBSTAT -> . LVALUE ATTRIBUTION ATRIB_RIGHT
    (48) PRINTSTAT -> . PRINT EXPRESSION
    (49) READSTAT -> . READ LVALUE
    (50) RETURNSTAT -> . RETURN
    (51) IFSTAT -> . IF LPAREN EXPRESSION RPAREN new_scope LBRACKETS STATELIST RBRACKETS OPT_ELSE
    (54) FORSTAT -> . FOR LPAREN ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPAREN new_loop_scope LBRACKETS STATELIST RBRACKETS
    (2) new_scope -> .
    (10) FUNCDEF -> . DEF IDENT new_scope LPAREN PARAMLIST RPAREN LBRACKETS STATELIST RBRACKETS
    (15) DATATYPE -> . INT_KEYWORD
    (16) DATATYPE -> . FLOAT_KEYWORD
    (17) DATATYPE -> . STRING_KEYWORD
    (89) LVALUE -> . IDENT OPT_ALLOC_NUMEXP

    BREAK           shift and go to state 15
    SEMICOLON       shift and go to state 8
    PRINT           shift and go to state 20
    READ            shift and go to state 21
    RETURN          shift and go to state 22
    IF              shift and go to state 23
    FOR             shift and go to state 24
    LBRACKETS       reduce using rule 2 (new_scope -> .)
    DEF             shift and go to state 25
    INT_KEYWORD     shift and go to state 26
    FLOAT_KEYWORD   shift and go to state 27
    STRING_KEYWORD  shift and go to state 28
    IDENT           shift and go to state 18

    new_scope                      shift and go to state 4
    STATEMENT                      shift and go to state 5
    FUNCLIST                       shift and go to state 6
    VARDECL                        shift and go to state 7
    ATRIBSTAT                      shift and go to state 9
    PRINTSTAT                      shift and go to state 10
    READSTAT                       shift and go to state 11
    RETURNSTAT                     shift and go to state 12
    IFSTAT                         shift and go to state 13
    FORSTAT                        shift and go to state 14
    FUNCDEF                        shift and go to state 16
    DATATYPE                       shift and go to state 17
    LVALUE                         shift and go to state 19

state 3

    (6) PROGRAM -> empty .

    $end            reduce using rule 6 (PROGRAM -> empty .)


state 4

    (25) STATEMENT -> new_scope . LBRACKETS STATELIST RBRACKETS

    LBRACKETS       shift and go to state 29


state 5

    (4) PROGRAM -> new_scope STATEMENT .

    $end            reduce using rule 4 (PROGRAM -> new_scope STATEMENT .)


state 6

    (5) PROGRAM -> new_scope FUNCLIST .

    $end            reduce using rule 5 (PROGRAM -> new_scope FUNCLIST .)


state 7

    (18) STATEMENT -> VARDECL . SEMICOLON

    SEMICOLON       shift and go to state 30


state 8

    (27) STATEMENT -> SEMICOLON .

    $end            reduce using rule 27 (STATEMENT -> SEMICOLON .)
    BREAK           reduce using rule 27 (STATEMENT -> SEMICOLON .)
    SEMICOLON       reduce using rule 27 (STATEMENT -> SEMICOLON .)
    PRINT           reduce using rule 27 (STATEMENT -> SEMICOLON .)
    READ            reduce using rule 27 (STATEMENT -> SEMICOLON .)
    RETURN          reduce using rule 27 (STATEMENT -> SEMICOLON .)
    IF              reduce using rule 27 (STATEMENT -> SEMICOLON .)
    FOR             reduce using rule 27 (STATEMENT -> SEMICOLON .)
    INT_KEYWORD     reduce using rule 27 (STATEMENT -> SEMICOLON .)
    FLOAT_KEYWORD   reduce using rule 27 (STATEMENT -> SEMICOLON .)
    STRING_KEYWORD  reduce using rule 27 (STATEMENT -> SEMICOLON .)
    IDENT           reduce using rule 27 (STATEMENT -> SEMICOLON .)
    LBRACKETS       reduce using rule 27 (STATEMENT -> SEMICOLON .)
    RBRACKETS       reduce using rule 27 (STATEMENT -> SEMICOLON .)


state 9

    (19) STATEMENT -> ATRIBSTAT . SEMICOLON

    SEMICOLON       shift and go to state 31


state 10

    (20) STATEMENT -> PRINTSTAT . SEMICOLON

    SEMICOLON       shift and go to state 32


state 11

    (21) STATEMENT -> READSTAT . SEMICOLON

    SEMICOLON       shift and go to state 33


state 12

    (22) STATEMENT -> RETURNSTAT . SEMICOLON

    SEMICOLON       shift and go to state 34


state 13

    (23) STATEMENT -> IFSTAT .

    $end            reduce using rule 23 (STATEMENT -> IFSTAT .)
    BREAK           reduce using rule 23 (STATEMENT -> IFSTAT .)
    SEMICOLON       reduce using rule 23 (STATEMENT -> IFSTAT .)
    PRINT           reduce using rule 23 (STATEMENT -> IFSTAT .)
    READ            reduce using rule 23 (STATEMENT -> IFSTAT .)
    RETURN          reduce using rule 23 (STATEMENT -> IFSTAT .)
    IF              reduce using rule 23 (STATEMENT -> IFSTAT .)
    FOR             reduce using rule 23 (STATEMENT -> IFSTAT .)
    INT_KEYWORD     reduce using rule 23 (STATEMENT -> IFSTAT .)
    FLOAT_KEYWORD   reduce using rule 23 (STATEMENT -> IFSTAT .)
    STRING_KEYWORD  reduce using rule 23 (STATEMENT -> IFSTAT .)
    IDENT           reduce using rule 23 (STATEMENT -> IFSTAT .)
    LBRACKETS       reduce using rule 23 (STATEMENT -> IFSTAT .)
    RBRACKETS       reduce using rule 23 (STATEMENT -> IFSTAT .)


state 14

    (24) STATEMENT -> FORSTAT .

    $end            reduce using rule 24 (STATEMENT -> FORSTAT .)
    BREAK           reduce using rule 24 (STATEMENT -> FORSTAT .)
    SEMICOLON       reduce using rule 24 (STATEMENT -> FORSTAT .)
    PRINT           reduce using rule 24 (STATEMENT -> FORSTAT .)
    READ            reduce using rule 24 (STATEMENT -> FORSTAT .)
    RETURN          reduce using rule 24 (STATEMENT -> FORSTAT .)
    IF              reduce using rule 24 (STATEMENT -> FORSTAT .)
    FOR             reduce using rule 24 (STATEMENT -> FORSTAT .)
    INT_KEYWORD     reduce using rule 24 (STATEMENT -> FORSTAT .)
    FLOAT_KEYWORD   reduce using rule 24 (STATEMENT -> FORSTAT .)
    STRING_KEYWORD  reduce using rule 24 (STATEMENT -> FORSTAT .)
    IDENT           reduce using rule 24 (STATEMENT -> FORSTAT .)
    LBRACKETS       reduce using rule 24 (STATEMENT -> FORSTAT .)
    RBRACKETS       reduce using rule 24 (STATEMENT -> FORSTAT .)


state 15

    (26) STATEMENT -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 35


state 16

    (7) FUNCLIST -> FUNCDEF . FUNCLISTAUX
    (8) FUNCLISTAUX -> . FUNCLIST
    (9) FUNCLISTAUX -> . empty
    (7) FUNCLIST -> . FUNCDEF FUNCLISTAUX
    (1) empty -> .
    (10) FUNCDEF -> . DEF IDENT new_scope LPAREN PARAMLIST RPAREN LBRACKETS STATELIST RBRACKETS

    $end            reduce using rule 1 (empty -> .)
    DEF             shift and go to state 25

    FUNCDEF                        shift and go to state 16
    FUNCLISTAUX                    shift and go to state 36
    FUNCLIST                       shift and go to state 37
    empty                          shift and go to state 38

state 17

    (28) VARDECL -> DATATYPE . IDENT OPT_VECTOR

    IDENT           shift and go to state 39


state 18

    (89) LVALUE -> IDENT . OPT_ALLOC_NUMEXP
    (59) OPT_ALLOC_NUMEXP -> . LSQBRACKETS NUMEXPRESSION RSQBRACKETS OPT_ALLOC_NUMEXP
    (60) OPT_ALLOC_NUMEXP -> . empty
    (1) empty -> .

    LSQBRACKETS     shift and go to state 41
    ATTRIBUTION     reduce using rule 1 (empty -> .)
    TIMES           reduce using rule 1 (empty -> .)
    MODULE          reduce using rule 1 (empty -> .)
    DIVIDE          reduce using rule 1 (empty -> .)
    PLUS            reduce using rule 1 (empty -> .)
    MINUS           reduce using rule 1 (empty -> .)
    LOWER_THAN      reduce using rule 1 (empty -> .)
    GREATER_THAN    reduce using rule 1 (empty -> .)
    LOWER_OR_EQUALS_THAN reduce using rule 1 (empty -> .)
    GREATER_OR_EQUALS_THAN reduce using rule 1 (empty -> .)
    EQ_COMPARISON   reduce using rule 1 (empty -> .)
    NEQ_COMPARISON  reduce using rule 1 (empty -> .)
    SEMICOLON       reduce using rule 1 (empty -> .)
    RSQBRACKETS     reduce using rule 1 (empty -> .)
    RPAREN          reduce using rule 1 (empty -> .)

    OPT_ALLOC_NUMEXP               shift and go to state 40
    empty                          shift and go to state 42

state 19

    (31) ATRIBSTAT -> LVALUE . ATTRIBUTION ATRIB_RIGHT

    ATTRIBUTION     shift and go to state 43


state 20

    (48) PRINTSTAT -> PRINT . EXPRESSION
    (61) EXPRESSION -> . NUMEXPRESSION OPT_REL_OP_NUM_EXPR
    (70) NUMEXPRESSION -> . TERM REC_PLUS_MINUS_TERM
    (75) TERM -> . UNARYEXPR REC_UNARYEXPR
    (81) UNARYEXPR -> . PLUS_OR_MINUS FACTOR
    (82) UNARYEXPR -> . FACTOR
    (73) PLUS_OR_MINUS -> . PLUS
    (74) PLUS_OR_MINUS -> . MINUS
    (83) FACTOR -> . INT_CONSTANT
    (84) FACTOR -> . FLOAT_CONSTANT
    (85) FACTOR -> . STRING_CONSTANT
    (86) FACTOR -> . NULL
    (87) FACTOR -> . LVALUE
    (88) FACTOR -> . LPAREN NUMEXPRESSION RPAREN
    (89) LVALUE -> . IDENT OPT_ALLOC_NUMEXP

    PLUS            shift and go to state 50
    MINUS           shift and go to state 51
    INT_CONSTANT    shift and go to state 52
    FLOAT_CONSTANT  shift and go to state 53
    STRING_CONSTANT shift and go to state 54
    NULL            shift and go to state 55
    LPAREN          shift and go to state 57
    IDENT           shift and go to state 18

    EXPRESSION                     shift and go to state 44
    NUMEXPRESSION                  shift and go to state 45
    TERM                           shift and go to state 46
    UNARYEXPR                      shift and go to state 47
    PLUS_OR_MINUS                  shift and go to state 48
    FACTOR                         shift and go to state 49
    LVALUE                         shift and go to state 56

state 21

    (49) READSTAT -> READ . LVALUE
    (89) LVALUE -> . IDENT OPT_ALLOC_NUMEXP

    IDENT           shift and go to state 18

    LVALUE                         shift and go to state 58

state 22

    (50) RETURNSTAT -> RETURN .

    SEMICOLON       reduce using rule 50 (RETURNSTAT -> RETURN .)


state 23

    (51) IFSTAT -> IF . LPAREN EXPRESSION RPAREN new_scope LBRACKETS STATELIST RBRACKETS OPT_ELSE

    LPAREN          shift and go to state 59


state 24

    (54) FORSTAT -> FOR . LPAREN ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPAREN new_loop_scope LBRACKETS STATELIST RBRACKETS

    LPAREN          shift and go to state 60


state 25

    (10) FUNCDEF -> DEF . IDENT new_scope LPAREN PARAMLIST RPAREN LBRACKETS STATELIST RBRACKETS

    IDENT           shift and go to state 61


state 26

    (15) DATATYPE -> INT_KEYWORD .

    IDENT           reduce using rule 15 (DATATYPE -> INT_KEYWORD .)
    LSQBRACKETS     reduce using rule 15 (DATATYPE -> INT_KEYWORD .)


state 27

    (16) DATATYPE -> FLOAT_KEYWORD .

    IDENT           reduce using rule 16 (DATATYPE -> FLOAT_KEYWORD .)
    LSQBRACKETS     reduce using rule 16 (DATATYPE -> FLOAT_KEYWORD .)


state 28

    (17) DATATYPE -> STRING_KEYWORD .

    IDENT           reduce using rule 17 (DATATYPE -> STRING_KEYWORD .)
    LSQBRACKETS     reduce using rule 17 (DATATYPE -> STRING_KEYWORD .)


state 29

    (25) STATEMENT -> new_scope LBRACKETS . STATELIST RBRACKETS
    (55) STATELIST -> . STATEMENT OPT_STATELIST
    (18) STATEMENT -> . VARDECL SEMICOLON
    (19) STATEMENT -> . ATRIBSTAT SEMICOLON
    (20) STATEMENT -> . PRINTSTAT SEMICOLON
    (21) STATEMENT -> . READSTAT SEMICOLON
    (22) STATEMENT -> . RETURNSTAT SEMICOLON
    (23) STATEMENT -> . IFSTAT
    (24) STATEMENT -> . FORSTAT
    (25) STATEMENT -> . new_scope LBRACKETS STATELIST RBRACKETS
    (26) STATEMENT -> . BREAK SEMICOLON
    (27) STATEMENT -> . SEMICOLON
    (28) VARDECL -> . DATATYPE IDENT OPT_VECTOR
    (31) ATRIBSTAT -> . LVALUE ATTRIBUTION ATRIB_RIGHT
    (48) PRINTSTAT -> . PRINT EXPRESSION
    (49) READSTAT -> . READ LVALUE
    (50) RETURNSTAT -> . RETURN
    (51) IFSTAT -> . IF LPAREN EXPRESSION RPAREN new_scope LBRACKETS STATELIST RBRACKETS OPT_ELSE
    (54) FORSTAT -> . FOR LPAREN ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPAREN new_loop_scope LBRACKETS STATELIST RBRACKETS
    (2) new_scope -> .
    (15) DATATYPE -> . INT_KEYWORD
    (16) DATATYPE -> . FLOAT_KEYWORD
    (17) DATATYPE -> . STRING_KEYWORD
    (89) LVALUE -> . IDENT OPT_ALLOC_NUMEXP

    BREAK           shift and go to state 15
    SEMICOLON       shift and go to state 8
    PRINT           shift and go to state 20
    READ            shift and go to state 21
    RETURN          shift and go to state 22
    IF              shift and go to state 23
    FOR             shift and go to state 24
    LBRACKETS       reduce using rule 2 (new_scope -> .)
    INT_KEYWORD     shift and go to state 26
    FLOAT_KEYWORD   shift and go to state 27
    STRING_KEYWORD  shift and go to state 28
    IDENT           shift and go to state 18

    new_scope                      shift and go to state 4
    STATELIST                      shift and go to state 62
    STATEMENT                      shift and go to state 63
    VARDECL                        shift and go to state 7
    ATRIBSTAT                      shift and go to state 9
    PRINTSTAT                      shift and go to state 10
    READSTAT                       shift and go to state 11
    RETURNSTAT                     shift and go to state 12
    IFSTAT                         shift and go to state 13
    FORSTAT                        shift and go to state 14
    DATATYPE                       shift and go to state 17
    LVALUE                         shift and go to state 19

state 30

    (18) STATEMENT -> VARDECL SEMICOLON .

    $end            reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    BREAK           reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    SEMICOLON       reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    PRINT           reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    READ            reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    RETURN          reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    IF              reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    FOR             reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    INT_KEYWORD     reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    FLOAT_KEYWORD   reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    STRING_KEYWORD  reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    IDENT           reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    LBRACKETS       reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    RBRACKETS       reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)


state 31

    (19) STATEMENT -> ATRIBSTAT SEMICOLON .

    $end            reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    BREAK           reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    SEMICOLON       reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    PRINT           reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    READ            reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    RETURN          reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    IF              reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    FOR             reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    INT_KEYWORD     reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    FLOAT_KEYWORD   reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    STRING_KEYWORD  reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    IDENT           reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    LBRACKETS       reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    RBRACKETS       reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)


state 32

    (20) STATEMENT -> PRINTSTAT SEMICOLON .

    $end            reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    BREAK           reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    SEMICOLON       reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    PRINT           reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    READ            reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    RETURN          reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    IF              reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    FOR             reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    INT_KEYWORD     reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    FLOAT_KEYWORD   reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    STRING_KEYWORD  reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    IDENT           reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    LBRACKETS       reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    RBRACKETS       reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)


state 33

    (21) STATEMENT -> READSTAT SEMICOLON .

    $end            reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    BREAK           reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    SEMICOLON       reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    PRINT           reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    READ            reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    RETURN          reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    IF              reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    FOR             reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    INT_KEYWORD     reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    FLOAT_KEYWORD   reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    STRING_KEYWORD  reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    IDENT           reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    LBRACKETS       reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    RBRACKETS       reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)


state 34

    (22) STATEMENT -> RETURNSTAT SEMICOLON .
